--- a/0809_PracticeC++/0809_PracticeC++/0809_PracticeC++.vcxproj
+++ b/0809_PracticeC++/0809_PracticeC++/0809_PracticeC++.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{859d9f01-71db-48cb-95a7-aa2aaa91df05}</ProjectGuid>
     <RootNamespace>_0809_PracticeC__</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>0809_Sayings</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="sayings1.cpp" />
+    <ClCompile Include="sayings2.cpp" />
     <ClCompile Include="string1.cpp" />
     <ClCompile Include="stringbad.cpp" />
     <ClCompile Include="vegnews.cpp" />
