--- a/0902_wp_Atari/0902_wp_Atari/0902_wp_Atari.vcxproj.filters
+++ b/0902_wp_Atari/0902_wp_Atari/0902_wp_Atari.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="0902_wp_Atari.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="objects.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="0902_wp_Atari.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="assignment.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="objects.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
