--- a/EraserGame/EraserGame/EraserGame.vcxproj
+++ b/EraserGame/EraserGame/EraserGame.vcxproj
@@ -130,7 +130,7 @@
     <ClInclude Include="EraserGame.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="game_control.h" />
-    <ClInclude Include="map_control.h" />
+    <ClInclude Include="graphic_control.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -138,7 +138,7 @@
     <ClCompile Include="assignment.cpp" />
     <ClCompile Include="EraserGame.cpp" />
     <ClCompile Include="game_control.cpp" />
-    <ClCompile Include="map_control.cpp" />
+    <ClCompile Include="graphic_control.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="EraserGame.rc" />
