--- a/0919_wapi/0919_wapi/0919_wapi.vcxproj
+++ b/0919_wapi/0919_wapi/0919_wapi.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7b849728-8108-4a34-8a65-81b6fae1703a}</ProjectGuid>
-    <RootNamespace>EraserGame</RootNamespace>
+    <ProjectGuid>{f03f0ad2-4f24-444c-84b0-4e59221f7250}</ProjectGuid>
+    <RootNamespace>My0919wapi</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -35,9 +35,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -127,24 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="EraserGame.h" />
+    <ClInclude Include="0919_wapi.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="game_control.h" />
-    <ClInclude Include="graphic_control.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="assignment.cpp" />
-    <ClCompile Include="EraserGame.cpp" />
-    <ClCompile Include="game_control.cpp" />
-    <ClCompile Include="graphic_control.cpp" />
+    <ClCompile Include="0919_wapi.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="EraserGame.rc" />
+    <ResourceCompile Include="0919_wapi.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="EraserGame.ico" />
+    <Image Include="0919_wapi.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
