--- a/EraserGame/EraserGame/EraserGame.vcxproj
+++ b/EraserGame/EraserGame/EraserGame.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="game_control.h" />
     <ClInclude Include="graphic_control.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -139,6 +140,7 @@
     <ClCompile Include="EraserGame.cpp" />
     <ClCompile Include="game_control.cpp" />
     <ClCompile Include="graphic_control.cpp" />
+    <ClCompile Include="player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="EraserGame.rc" />
