--- a/EraserGame/EraserGame/EraserGame.vcxproj.filters
+++ b/EraserGame/EraserGame/EraserGame.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="graphic_control.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EraserGame.cpp">
@@ -45,6 +48,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="graphic_control.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="player.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
