character move - buggy

--- a/0925_AStar/0925_AStar/0925_AStar.vcxproj
+++ b/0925_AStar/0925_AStar/0925_AStar.vcxproj
@@ -130,6 +130,8 @@
     <ClInclude Include="0925_AStar.h" />
     <ClInclude Include="astar.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="graphic_control.h" />
+    <ClInclude Include="guide.h" />
     <ClInclude Include="map_control.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -137,6 +139,8 @@
   <ItemGroup>
     <ClCompile Include="0925_AStar.cpp" />
     <ClCompile Include="astar.cpp" />
+    <ClCompile Include="graphic_control.cpp" />
+    <ClCompile Include="guide.cpp" />
     <ClCompile Include="map_control.cpp" />
   </ItemGroup>
   <ItemGroup>
