--- a/DirectX/InhaDX/InhaDX/InhaDX.vcxproj
+++ b/DirectX/InhaDX/InhaDX/InhaDX.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cDeviceManager.h" />
     <ClInclude Include="cMainGame.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="InhaDX.h" />
@@ -138,6 +139,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cDeviceManager.cpp" />
     <ClCompile Include="cMainGame.cpp" />
     <ClCompile Include="InhaDX.cpp" />
   </ItemGroup>
