--- a/InhaDX/PracticeHome/PracticeHome.vcxproj.filters
+++ b/InhaDX/PracticeHome/PracticeHome.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="cCamera.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="cGizmo.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="cCubePNT.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PracticeHome.cpp">
@@ -63,6 +69,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cCamera.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cGizmo.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cCubePNT.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
