--- a/InhaDX/PracticeHome/PracticeHome.vcxproj
+++ b/InhaDX/PracticeHome/PracticeHome.vcxproj
@@ -137,13 +137,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="cBody.h" />
     <ClInclude Include="cCamera.h" />
+    <ClInclude Include="cCharacter.h" />
+    <ClInclude Include="cCubeMan.h" />
+    <ClInclude Include="cCubeNode.h" />
     <ClInclude Include="cCubePC.h" />
     <ClInclude Include="cCubePNT.h" />
     <ClInclude Include="cDeviceManager.h" />
     <ClInclude Include="cGizmo.h" />
     <ClInclude Include="cGrid.h" />
+    <ClInclude Include="cHead.h" />
+    <ClInclude Include="cLeftArm.h" />
+    <ClInclude Include="cLeftLeg.h" />
     <ClInclude Include="cMainGame.h" />
+    <ClInclude Include="cRightArm.h" />
+    <ClInclude Include="cRightLeg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Management.h" />
     <ClInclude Include="PracticeHome.h" />
@@ -151,13 +160,22 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cBody.cpp" />
     <ClCompile Include="cCamera.cpp" />
+    <ClCompile Include="cCharacter.cpp" />
+    <ClCompile Include="cCubeMan.cpp" />
+    <ClCompile Include="cCubeNode.cpp" />
     <ClCompile Include="cCubePC.cpp" />
     <ClCompile Include="cCubePNT.cpp" />
     <ClCompile Include="cDeviceManager.cpp" />
     <ClCompile Include="cGizmo.cpp" />
     <ClCompile Include="cGrid.cpp" />
+    <ClCompile Include="cHead.cpp" />
+    <ClCompile Include="cLeftArm.cpp" />
+    <ClCompile Include="cLeftLeg.cpp" />
     <ClCompile Include="cMainGame.cpp" />
+    <ClCompile Include="cRightArm.cpp" />
+    <ClCompile Include="cRightLeg.cpp" />
     <ClCompile Include="PracticeHome.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +184,9 @@
   <ItemGroup>
     <Image Include="PracticeHome.ico" />
     <Image Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
