--- a/InhaDX/PracticeHome/PracticeHome.vcxproj.filters
+++ b/InhaDX/PracticeHome/PracticeHome.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\Obj">
+      <UniqueIdentifier>{03044324-d0b4-4d02-8599-e9f828f36e7a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="헤더 파일\Obj">
+      <UniqueIdentifier>{ab9145e7-c454-447f-ae9c-163320de3715}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -78,6 +84,24 @@
     <ClInclude Include="cCubeMan.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="cMtlTex.h">
+      <Filter>헤더 파일\Obj</Filter>
+    </ClInclude>
+    <ClInclude Include="cGroup.h">
+      <Filter>헤더 파일\Obj</Filter>
+    </ClInclude>
+    <ClInclude Include="cObject.h">
+      <Filter>헤더 파일\Obj</Filter>
+    </ClInclude>
+    <ClInclude Include="cObjectManager.h">
+      <Filter>헤더 파일\Obj</Filter>
+    </ClInclude>
+    <ClInclude Include="cTextureManager.h">
+      <Filter>헤더 파일\Obj</Filter>
+    </ClInclude>
+    <ClInclude Include="cObjLoader.h">
+      <Filter>헤더 파일\Obj</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PracticeHome.cpp">
@@ -130,6 +154,24 @@
     </ClCompile>
     <ClCompile Include="cCubeMan.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cObject.cpp">
+      <Filter>소스 파일\Obj</Filter>
+    </ClCompile>
+    <ClCompile Include="cObjectManager.cpp">
+      <Filter>소스 파일\Obj</Filter>
+    </ClCompile>
+    <ClCompile Include="cGroup.cpp">
+      <Filter>소스 파일\Obj</Filter>
+    </ClCompile>
+    <ClCompile Include="cMtlTex.cpp">
+      <Filter>소스 파일\Obj</Filter>
+    </ClCompile>
+    <ClCompile Include="cTextureManager.cpp">
+      <Filter>소스 파일\Obj</Filter>
+    </ClCompile>
+    <ClCompile Include="cObjLoader.cpp">
+      <Filter>소스 파일\Obj</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
