--- a/InhaDX2/InhaDX/InhaDX.vcxproj
+++ b/InhaDX2/InhaDX/InhaDX.vcxproj
@@ -154,10 +154,12 @@
     <ClInclude Include="cObject.h" />
     <ClInclude Include="cObjectManager.h" />
     <ClInclude Include="cObjLoader.h" />
+    <ClInclude Include="cObjMap.h" />
     <ClInclude Include="cRightArm.h" />
     <ClInclude Include="cRightLeg.h" />
     <ClInclude Include="cTextureManager.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="iMap.h" />
     <ClInclude Include="InhaDX.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -182,9 +184,11 @@
     <ClCompile Include="cObject.cpp" />
     <ClCompile Include="cObjectManager.cpp" />
     <ClCompile Include="cObjLoader.cpp" />
+    <ClCompile Include="cObjMap.cpp" />
     <ClCompile Include="cRightArm.cpp" />
     <ClCompile Include="cRightLeg.cpp" />
     <ClCompile Include="cTextureManager.cpp" />
+    <ClCompile Include="iMap.cpp" />
     <ClCompile Include="InhaDX.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -193,6 +197,9 @@
   <ItemGroup>
     <Image Include="InhaDX.ico" />
     <Image Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
