--- a/InhaDX2/InhaDX/InhaDX.vcxproj.filters
+++ b/InhaDX2/InhaDX/InhaDX.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="헤더 파일\Obj">
       <UniqueIdentifier>{87dca753-2507-4b22-83d9-dbccb327daaa}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Map">
+      <UniqueIdentifier>{c48769f9-b227-4ad9-96ed-ecad9ea765bd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -105,6 +108,12 @@
     <ClInclude Include="cObjLoader.h">
       <Filter>헤더 파일\Obj</Filter>
     </ClInclude>
+    <ClInclude Include="iMap.h">
+      <Filter>소스 파일\Map</Filter>
+    </ClInclude>
+    <ClInclude Include="cObjMap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InhaDX.cpp">
@@ -176,6 +185,12 @@
     <ClCompile Include="cObjLoader.cpp">
       <Filter>소스 파일\Obj</Filter>
     </ClCompile>
+    <ClCompile Include="iMap.cpp">
+      <Filter>소스 파일\Map</Filter>
+    </ClCompile>
+    <ClCompile Include="cObjMap.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="InhaDX.rc">
@@ -189,5 +204,8 @@
     <Image Include="InhaDX.ico">
       <Filter>리소스 파일</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
